static/css/base.css
html {
  height: 100%;
}

body {
  background-color: #fff7ec;
  height: calc(100vh - 164px);
  font-family: "Lato", Arial, Helvetica;
  position: relative;
  color: #1f1f1f;
}

.title {
  font-family: "Lobster", Arial, Helvetica;
  color: #a67c00 !important;
  size: 3rem;
}

.icon {
  align-items: center;
  display: inline-flex;
  justify-content: center;
  width: 1.5rem;
}

.shop-now-button {
  background: black;
  color: white;
  min-width: 260px;
}

.btn-black {
  background: black;
  color: white;
}

.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
  background: #222;
  color: white;
}

.text-black {
  color: #1f1f1f !important;
}

.border-black {
  border: 1px solid black !important;
}

.desktop-header .row {
  display: flex;
  align-items: center;
  width: 100%;
  max-width: 100%;
  justify-content: center;
}

.desktop-header {
  width: 100vw;
  max-width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #fff7ec;
}
.product-card {
  background-color: #fff7ec;
}

.mobile-background {
  background-color: #fff7ec;
}

.add-to-basket {
  background-color: #1f1f1f;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 5vh;
  color: #a67c00;
  font-size: 28px;
  font-weight: 300;
  text-decoration: none;
}

.add-to-basket:hover {
  color: #a67c00;
  text-decoration: none;
}

.font-weight-bold {
  font-weight: bold;
}
.navbar {
  padding-left: 0;
  padding-right: 0;
}

.bottom-container {
  margin-top: auto;
}

.col-12.col-md-6.col-lg-4 {
  display: flex;
  flex-direction: column;
}

.height-align {
  align-items: stretch;
}

.accordion-item {
  --bs-accordion-active-color: #1f1f1f;
  --bs-accordion-btn-bg: #fff7ec;
  --bs-accordion-active-bg: #fff7ec;
  --bs-accordion-bg: #fff7ec;
}

.header {
  letter-spacing: 4px;
}
/* -------------------------------- Media Queries */

/* Mobile Styles (up to 767px) */
@media (max-width: 767px) {
  .mobile-header {
    display: flex;
  }
  .desktop-header {
    display: none;
  }
  .main-logo-link h2 {
    font-size: 1.5rem; /* Smaller font on mobile */
  }
  .col-4 {
    flex: 0 0 100%;
    max-width: 100%;
    text-align: center;
    margin-bottom: 1rem;
  }
  .col-4:last-child {
    margin-bottom: 0;
  }

  body {
    padding-top: 56px;
  }
}

/* Tablet Styles (768px - 991px) */
@media (min-width: 768px) and (max-width: 991px) {
  .mobile-header {
    display: flex;
  }
  .desktop-header {
    display: none;
  }
  .main-logo-link h2 {
    font-size: 2rem; /* Medium font on tablet */
  }
  .col-4 {
    flex: 0 0 33.333333%;
    max-width: 33.333333%;
    text-align: center;
  }
  .dropdown-menu {
    padding: 0.25rem 3.5rem;
  }
  .searchbar-mobile {
    max-width: 60%;
  }
}

/* Desktop Styles (992px and up) */
@media (min-width: 992px) {
  .desktop-header {
    display: flex;
  }
  .mobile-header {
    display: none;
  }
  body {
    padding-top: 164px;
  }
  .main-logo-link h2 {
    font-size: 3rem; /* Larger font on desktop */
  }
}

.gold-font {
  color: #a67c00;
}

/* -------------------------------- Search Bar */

.button {
  display: inline-block;
  margin: 4px 2px;
  font-size: 14px;
  padding-left: 32px;
  padding-right: 32px;
  height: 50px;
  line-height: 50px;
  text-align: center;
  text-decoration: none;
  cursor: pointer;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.button:hover,
.gold:hover {
  transition-duration: 0.4s;
  -moz-transition-duration: 0.4s;
  -webkit-transition-duration: 0.4s;
  -o-transition-duration: 0.4s;
  color: #a67c00;
}

.search-container {
  position: relative;
  display: inline-block;
  margin: 4px 2px;
  height: 50px;
  width: 50px;
  vertical-align: bottom;
}

.searchbutton {
  position: absolute;
  font-size: 22px;
  width: 100%;
  margin: 0;
  padding: 0;
}

.search:focus + .searchbutton {
  transition-duration: 0.4s;
  -moz-transition-duration: 0.4s;
  -webkit-transition-duration: 0.4s;
  -o-transition-duration: 0.4s;
}

.search {
  position: absolute;
  left: 49px; /* Button width-1px (Not 50px/100% because that will sometimes show a 1px line between the search box and button) */
  outline: none;
  border: none;
  border-bottom: 2px solid #1f1f1f;
  padding: 0;
  width: 0;
  height: 100%;
  z-index: 10;
  transition-duration: 0.4s;
  -moz-transition-duration: 0.4s;
  -webkit-transition-duration: 0.4s;
  -o-transition-duration: 0.4s;
  color: #1f1f1f;
  background-color: #fff7ec;
}

.search:focus {
  width: 363px; /* Bar width+1px */
  padding: 0 16px 0 0;
}

.expandright {
  left: auto;
  right: 49px; /* Button width-1px */
}

.expandright:focus {
  padding: 0 0 0 16px;
}

/* -------------------------------- Nav Drop Downs */
.cursor-hover {
  cursor: pointer;
}

.collapse {
  background-color: #fff7ec;
  overflow-y: auto;
}

.dropdown-menu {
  background-color: #fff7ec;
  border: none;
}

.btn-outline {
  color: #1f1f1f;
}

.dropdown-menu li {
  position: relative;
}
.dropdown-menu .dropdown-submenu {
  display: none;
  position: absolute;
  left: 100%;
  top: -7px;
}
.dropdown-menu .dropdown-submenu-left {
  right: 100%;
  left: auto;
}
.dropdown-menu > li:hover > .dropdown-submenu {
  display: block;
}

/* -------------------------------- page divider */

.center-diamond {
  border: 0;
  height: 1px;
  width: 55%;
  position: relative;
  margin: 30px auto;
  background: #bc0500;
}
.center-diamond:before {
  content: "";
  width: 6px;
  height: 6px;
  background: #bc0500;
  display: inline-block;
  border: 2px solid #bc0500;
  position: absolute;
  top: -3px; /* -1/2 diamond size */
  left: 50%;
  margin-left: -3px; /* -1/2 diamond size */
  transform: rotate(45deg);
}

